objects/APXT_CongaSign__Document__c.object
<CustomObject>
    <fields>
        <fullName>APXT_CongaSign__ContentDocumentId__c</fullName>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__ContentVersionId__c</fullName>
        <label>Content Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__DocumentOrder__c</fullName>
        <label>Document Order</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Conga Sign Transaction</label>
        <referenceTo>APXT_CongaSign__Transaction__c</referenceTo>
        <relationshipLabel>Conga Sign Documents</relationshipLabel>
        <relationshipName>Conga_Sign_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Signer_Attachment</fullName>
                    <label>Signer Attachment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conga Sign Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Sign Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>